--- a/UI/src/app/modules/contact/components/contact-form/contact-form.component.scss
+++ b/UI/src/app/modules/contact/components/contact-form/contact-form.component.scss
@@ -4,27 +4,26 @@ input, textarea {
   border-radius: 4px;
   border-color: #ced4da;
 }
+
+.p-slider, .p-button {
+  width: 600px
+}
+
 textarea {
   height: 200px;
-  font-family: $base-font;
-  font-size: 1rem;
 }
 
-textarea:focus{
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-  border-color: #007bff;
+p-checkbox ~ label, p-slider ~ label{
+  color: #495057;
 }
 
-textarea.fixed-float-label :focus ~ label,
-textarea.fixed-float-label ~ label {
-  top: -.75em!important;
-  font-size: 12px!important;
+.form-control-box{
+  position: absolute;
+  left: -100vw;
 }
 
 @media screen and (max-width: 650px){
-  input, textarea {
+  input, textarea, .p-slider, .p-button {
     width: 80vw;
   }
 }
