links to the contact form added, small styling improvement applied

--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -111,7 +111,8 @@
 
         </div>
       </div>
-      If you have any questions or you would like to share your opinion with us, please email us at <b>support&nbsp;(at)&nbsp;qa4sm.eu.</b>
+      If you have any questions or you would like to share your opinion with us, please email us at <b>support&nbsp;(at)&nbsp;qa4sm.eu</b>
+      or use our <a [routerLink]="['/contact-us']">contact form</a>.
 
     </div>
     <div class="md:col-5">
