--- a/validator/templates/admin/qa4sm_statistics.html
+++ b/validator/templates/admin/qa4sm_statistics.html
@@ -68,6 +68,7 @@
 <!-- Plot divs -->
 <div id="val_nums_by_users" class="plot_div"></div>
 <div id="validations_in_time" class="plot_div"></div>
+<div id="users_in_time" class="plot_div"></div>
 <div id="datasets_cumulative" class="plot_div"></div>
 <div id="monthly_outage" class="plot_div"></div>
 <div id="monthly_uptime" class="plot_div"></div>
@@ -145,6 +146,10 @@
     var basic_color_2 = 'rgb(0, 100, 0)'//'rgb(255,20,147)';
     var versions_colors = ['rgb(0, 204, 204)', 'rgb(0, 204, 0)', 'rgb(204, 0, 0)', 'rgb(204, 0, 204)']
 
+
+    function datasets_stack_barplot(x_dataset, y_dataset, names){
+
+    }
 
     // Auxiliary functions for plotting:
     function datasets_stack_barplot(x_dataset, y_dataset, names) {
@@ -240,8 +245,8 @@
     // Number of validations run by each user plot
     var val_nums_by_users_div = $('#val_nums_by_users')[0];
     var val_nums_by_users_plot_data = [{
-        x: {{stats.val_num_by_user_data.users|safe}},
-        y: {{stats.val_num_by_user_data.validations_num|safe}},
+        x: {{stats.user_data.users|safe}},
+        y: {{stats.user_data.validations_num|safe}},
         type: 'bar',
         marker: {color: basic_color}}]
 
@@ -287,6 +292,127 @@
     }
 
     Plotly.react(val_nums_by_users_div, val_nums_by_users_plot_data, val_nums_by_user_layout);
+
+
+    //==========================================================================================
+    // Number of users by time range:
+    var first_user = {{stats.user_data.first_user_time|safe}}[0];
+    var last_user = {{stats.user_data.last_user_time|safe}}[0];
+    var H1 = 3600000; //xbins are defined in mili seconds, therefore one hour is defined this way
+    var D1 = H1 * 24; // one day
+    var W1 = D1 * 7; // one week
+    var M1 = D1 * 30; // one week
+    var users_num_in_time_div = $('#users_in_time')[0];
+
+    var users_in_time_data = [{
+        x: {{stats.user_data.users_time|safe}},
+    autobinx: false,
+        autobiny: true,
+        marker:
+    {color: basic_color,
+        line:
+        {width: 0,
+            color:'rgb(150, 150, 150)'}
+    },
+    name: 'date',
+        type:'histogram',
+        xbins:{
+        end: last_user,
+            size: H1,
+            start: first_user}}];
+
+    var users_in_time_layout = {
+        plot_bgcolor: plot_bgcolor,
+        title: {
+            text: 'Number of users in particular time periods',
+            font: {
+                family: title_font_type,
+                size: title_font_size
+            },
+            yref: 'container',
+            y: 0.85
+        },
+        xaxis: {
+            type: 'date',
+            autorange: false,
+            range: [first_user, last_user],
+            title: {
+                text: 'Date range',
+                font: {
+                    family: axis_font_type,
+                    size: axis_font_size
+                },
+                y: -0.3
+            },
+            font: {
+                family: axis_font_type,
+                size: axis_font_size
+            },
+            dtick: M1,
+            tickangle: 45,
+            tickfont: {
+                size: tick_font_size,
+                family: tick_font_type
+            },
+        },
+        yaxis: {
+            autorange: true,
+            title: {
+                text: 'Number of users',
+                font: {
+                    family: axis_font_type,
+                    size: axis_font_size
+                }
+            },
+            type: 'linear',
+            tickfont: {
+                size: tick_font_size,
+                family: tick_font_type
+            },
+        },
+        updatemenus: [{
+            x: 0.1,
+            y: 1.15,
+            xref: 'paper',
+            yref: 'paper',
+            yanchor: 'top',
+            active: 0,
+            showactive: true,
+            buttons: [{
+                args: [{'xbins.size': [H1], 'marker.line.width': [0.1]}],
+                label: 'Hour',
+                method: 'restyle',
+            }, {
+                args: [{'xbins.size': [D1], 'marker.line.width': [0.1]}],
+                label: 'Day',
+                method: 'restyle',
+            }, {
+                args: [{'xbins.size': [W1], "marker.line.width": [0.5]}],
+                label: 'Week',
+                method: 'restyle',
+            }, {
+                args: [{'xbins.size': ['M1'], 'marker.line.width': [1]}],
+                label: 'Month',
+                method: 'restyle',
+            }, {
+                args: [{'xbins.size': ['M3'], "marker.line.width": [1]}],
+                label: 'Quater',
+                method: 'restyle',
+            }, {
+                args: [{'xbins.size': 'M6', "marker.line.width": [1]}],
+                label: 'Half Year',
+                method: 'restyle',
+            }, {
+                args: [{'xbins.size': 'M12', "marker.line.width": [1]}],
+                label: 'Year',
+                method: 'restyle',
+            }]
+        }]
+    };
+
+    // console.log(validations_in_time_layout.xaxis.dtick)
+
+    Plotly.newPlot(users_in_time, users_in_time_data, users_in_time_layout);
 
     //==========================================================================================
     // Number of validations by time range:
