user in time plot updated

--- a/validator/templates/admin/qa4sm_statistics.html
+++ b/validator/templates/admin/qa4sm_statistics.html
@@ -296,16 +296,24 @@
 
     //==========================================================================================
     // Number of users by time range:
+
+    var time = {{stats.user_data.users_time|safe}};
+    var users = {{stats.user_data.users|safe}};
+
     var first_user = {{stats.user_data.first_user_time|safe}}[0];
     var last_user = {{stats.user_data.last_user_time|safe}}[0];
-    var H1 = 3600000; //xbins are defined in mili seconds, therefore one hour is defined this way
+
+    var project_start_date = '2021-05-01 00:00'
+    console.log(first_user);
+    var H1 = 7200000; //xbins are defined in mili seconds, therefore one hour is defined this way
     var D1 = H1 * 24; // one day
     var W1 = D1 * 7; // one week
     var M1 = D1 * 30; // one week
     var users_num_in_time_div = $('#users_in_time')[0];
+    var enable_cumulative = true;
 
     var users_in_time_data = [{
-        x: {{stats.user_data.users_time|safe}},
+        x: time,
     autobinx: false,
         autobiny: true,
         marker:
@@ -316,15 +324,17 @@
     },
     name: 'date',
         type:'histogram',
+        cumulative: {enabled: false},
         xbins:{
         end: last_user,
             size: H1,
             start: first_user}}];
 
     var users_in_time_layout = {
+        width: 2100,
         plot_bgcolor: plot_bgcolor,
         title: {
-            text: 'Number of users in particular time periods',
+            text: 'Number of users registered in particular time periods',
             font: {
                 family: title_font_type,
                 size: title_font_size
@@ -342,7 +352,7 @@
                     family: axis_font_type,
                     size: axis_font_size
                 },
-                y: -0.3
+                y: -0.5
             },
             font: {
                 family: axis_font_type,
@@ -395,6 +405,10 @@
                 label: 'Month',
                 method: 'restyle',
             }, {
+                args: [{'xbins.size': ['M1'], 'marker.line.width': [1], 'cumulative.enabled': true}],
+                label: 'Month - Cumulated',
+                method: 'restyle',
+            }, {
                 args: [{'xbins.size': ['M3'], "marker.line.width": [1]}],
                 label: 'Quater',
                 method: 'restyle',
@@ -406,7 +420,7 @@
                 args: [{'xbins.size': 'M12', "marker.line.width": [1]}],
                 label: 'Year',
                 method: 'restyle',
-            }]
+            }],
         }]
     };
 
