cumulative plots for validations added

--- a/validator/templates/admin/qa4sm_statistics.html
+++ b/validator/templates/admin/qa4sm_statistics.html
@@ -331,7 +331,6 @@
             start: first_user}}];
 
     var users_in_time_layout = {
-        width: 2100,
         plot_bgcolor: plot_bgcolor,
         title: {
             text: 'Number of users registered in particular time periods',
@@ -389,19 +388,23 @@
             active: 0,
             showactive: true,
             buttons: [{
-                args: [{'xbins.size': [H1], 'marker.line.width': [0.1]}],
+                args: [{'xbins.size': [H1], 'marker.line.width': [0.1], 'cumulative.enabled': false}],
                 label: 'Hour',
                 method: 'restyle',
             }, {
-                args: [{'xbins.size': [D1], 'marker.line.width': [0.1]}],
+                args: [{'xbins.size': [D1], 'marker.line.width': [0.1], 'cumulative.enabled': false}],
                 label: 'Day',
                 method: 'restyle',
             }, {
-                args: [{'xbins.size': [W1], "marker.line.width": [0.5]}],
+                args: [{'xbins.size': [W1], "marker.line.width": [0.5], 'cumulative.enabled': false}],
                 label: 'Week',
                 method: 'restyle',
             }, {
-                args: [{'xbins.size': ['M1'], 'marker.line.width': [1]}],
+                args: [{'xbins.size': [W1], "marker.line.width": [0.5], 'cumulative.enabled': true}],
+                label: 'Week - Cumulative',
+                method: 'restyle',
+            }, {
+                args: [{'xbins.size': ['M1'], 'marker.line.width': [1], 'cumulative.enabled': false}],
                 label: 'Month',
                 method: 'restyle',
             }, {
@@ -409,16 +412,28 @@
                 label: 'Month - Cumulated',
                 method: 'restyle',
             }, {
-                args: [{'xbins.size': ['M3'], "marker.line.width": [1]}],
+                args: [{'xbins.size': ['M3'], "marker.line.width": [1], 'cumulative.enabled': false}],
                 label: 'Quater',
                 method: 'restyle',
+            },  {
+                args: [{'xbins.size': ['M3'], "marker.line.width": [1], 'cumulative.enabled': true}],
+                label: 'Quater - Cumulative',
+                method: 'restyle',
             }, {
-                args: [{'xbins.size': 'M6', "marker.line.width": [1]}],
+                args: [{'xbins.size': 'M6', "marker.line.width": [1], 'cumulative.enabled': false}],
                 label: 'Half Year',
                 method: 'restyle',
             }, {
-                args: [{'xbins.size': 'M12', "marker.line.width": [1]}],
+                args: [{'xbins.size': 'M6', "marker.line.width": [1], 'cumulative.enabled': true}],
+                label: 'Half Year - Cumulative',
+                method: 'restyle',
+            }, {
+                args: [{'xbins.size': 'M12', "marker.line.width": [1], 'cumulative.enabled': false}],
                 label: 'Year',
+                method: 'restyle',
+            }, {
+                args: [{'xbins.size': 'M12', "marker.line.width": [1], 'cumulative.enabled': true}],
+                label: 'Year -Cumulative',
                 method: 'restyle',
             }],
         }]
@@ -513,32 +528,52 @@
             active: 0,
             showactive: true,
             buttons: [{
-                args: [{'xbins.size': [H1], 'marker.line.width': [0.1]}],
+                args: [{'xbins.size': [H1], 'marker.line.width': [0.1], 'cumulative.enabled': false}],
                 label: 'Hour',
                 method: 'restyle',
             }, {
-                args: [{'xbins.size': [D1], 'marker.line.width': [0.1]}],
+                args: [{'xbins.size': [D1], 'marker.line.width': [0.1], 'cumulative.enabled': false}],
                 label: 'Day',
                 method: 'restyle',
             }, {
-                args: [{'xbins.size': [W1], "marker.line.width": [0.5]}],
+                args: [{'xbins.size': [W1], "marker.line.width": [0.5], 'cumulative.enabled': false}],
                 label: 'Week',
                 method: 'restyle',
             }, {
-                args: [{'xbins.size': ['M1'], 'marker.line.width': [1]}],
+                args: [{'xbins.size': [W1], "marker.line.width": [0.5], 'cumulative.enabled': true}],
+                label: 'Week - Cumulative',
+                method: 'restyle',
+            }, {
+                args: [{'xbins.size': ['M1'], 'marker.line.width': [1], 'cumulative.enabled': false}],
                 label: 'Month',
                 method: 'restyle',
             }, {
-                args: [{'xbins.size': ['M3'], "marker.line.width": [1]}],
-                label: 'Quater',
+                args: [{'xbins.size': ['M1'], 'marker.line.width': [1], 'cumulative.enabled': true}],
+                label: 'Month - Cumulative',
                 method: 'restyle',
             }, {
-                args: [{'xbins.size': 'M6', "marker.line.width": [1]}],
+                args: [{'xbins.size': ['M3'], "marker.line.width": [1], 'cumulative.enabled': false}],
+                label: 'Quater',
+                method: 'restyle',
+            },  {
+                args: [{'xbins.size': ['M3'], "marker.line.width": [1], 'cumulative.enabled': true}],
+                label: 'Quater - Cumulative',
+                method: 'restyle',
+            }, {
+                args: [{'xbins.size': 'M6', "marker.line.width": [1], 'cumulative.enabled': false}],
                 label: 'Half Year',
                 method: 'restyle',
             }, {
-                args: [{'xbins.size': 'M12', "marker.line.width": [1]}],
+                args: [{'xbins.size': 'M6', "marker.line.width": [1], 'cumulative.enabled': true}],
+                label: 'Half Year - Cumulative',
+                method: 'restyle',
+            }, {
+                args: [{'xbins.size': 'M12', "marker.line.width": [1], 'cumulative.enabled': false}],
                 label: 'Year',
+                method: 'restyle',
+            }, {
+                args: [{'xbins.size': 'M12', "marker.line.width": [1], 'cumulative.enabled': true}],
+                label: 'Year - Cumulative',
                 method: 'restyle',
             }]
         }]
