--- a/UI/src/app/modules/contact/components/contact-form/contact-form.component.html
+++ b/UI/src/app/modules/contact/components/contact-form/contact-form.component.html
@@ -48,7 +48,7 @@
               pButton
               type="submit"
               label="Send"
-              [disabled]="!contactForm.valid || sliderValues.length < 10">
+              [disabled]="!contactForm.valid && sliderValues.length < 10">
       </button>
 
 
