--- a/UI/src/app/modules/user/user-form/user-form.component.html
+++ b/UI/src/app/modules/user/user-form/user-form.component.html
@@ -126,7 +126,19 @@
 
       <div *ngIf="!userData" class="py-3" style="max-width: 15rem; line-height: 1.2rem">
         <p-checkbox id="terms" formControlName="terms_consent" binary="true"></p-checkbox>
-        <label for="terms"> I accept the <a [routerLink]="['/terms']">terms, conditions and privacy policy</a>.</label>
+        <label for="terms"> I accept the <a [routerLink]="['/terms']" target="_blank">terms, conditions and privacy policy</a>.</label>
+      </div>
+
+
+      <div *ngIf="!userData" class="py-3" style="line-height: 1.2rem">
+        <span class="p-float-label">
+          <p-slider id="honeypot-user" formControlName="honeypot" ></p-slider>
+          <label for="honeypot-user" style="margin-top: -1rem"> Are you a real person? Slide the handle all the way to the right <span class="pi pi-angle-double-right"></span></label>
+        </span>
+      </div>
+
+      <div class="form-control-box">
+        <p-checkbox id="active" formControlName="active" binary="true"></p-checkbox>
       </div>
 
       <button *ngIf="!userData"
@@ -139,7 +151,7 @@
               pButton
               type="submit"
               label="Save"
-              [disabled]="!userForm.valid">
+              [disabled]="!userForm.valid && sliderValues.length > 5">
       </button>
 
 
