--- a/UI/src/app/modules/dataset/components/dataset/dataset.component.html
+++ b/UI/src/app/modules/dataset/components/dataset/dataset.component.html
@@ -11,8 +11,8 @@
           </span>
       </ng-template>
       <ng-template let-item pTemplate="selectedItem">
-         <span>{{item.pretty_name}} <em>{{item.user && !item.is_shared ? "  (user data)" :
-           (item.user && item.is_shared ? " (shared data)" : "" )}}</em> </span>
+         <span>{{item.pretty_name}} <em>{{item.user === authService.currentUser.id ? "  (user data)" :
+           (item.user !== authService.currentUser.id && item.is_shared ? " (shared data)" : "" )}}</em> </span>
       </ng-template>
     </p-dropdown>
 
