--- a/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
@@ -9,7 +9,7 @@
   </ng-template>
   <div class="grid mx-0 px-0 my-0" *ngIf="userDataset.metadata_submitted" [style]="{height: '100%'}">
     <!--    dataset -->
-    <div class="col-5">
+    <div [ngClass]="authService.currentUser.is_staff ? 'col-4' : 'col-5'">
       <div><strong>Dataset: </strong></div>
 
 
@@ -124,20 +124,43 @@
       </div>
     </div>
     <!-- validations -->
-    <div class="col-5 p-fluid" [style]="{height: '100%'}">
+    <div class="p-fluid" [style]="{height: '100%'}" [ngClass]="authService.currentUser.is_staff ? 'col-4' : 'col-5'">
       <div><strong>Validation list: </strong></div>
-      <p-scrollPanel *ngIf="userDataset.validation_list.length > 0" [style]="{width: '80%', height: '80%'}">
-        <div *ngFor="let validation of userDataset.validation_list; index as ind">
-          {{ind + 1}}) <a routerLink="/validation-result/{{validation.val_id}}"
-                          pTooltip="View validation">{{validation.val_name}}</a>
+      <p-scrollPanel  [style]="{width: '80%', height: '80%'}">
+        <div *ngIf="userDataset.validation_list.length > 0">
+          <div *ngFor="let validation of userDataset.validation_list; index as ind">
+            {{ind + 1}}) <a routerLink="/validation-result/{{validation.val_id}}"
+                            pTooltip="View validation">{{validation.val_name}}</a>
+          </div>
+        </div>
+
+        <div class="no-validation-box" *ngIf="userDataset.validation_list.length === 0">
+          <em> No validation has been run with this data </em>
+        </div>
+
+      </p-scrollPanel>
+
+    </div>
+
+    <!-- sharing groups-->
+    <div *ngIf="authService.currentUser.is_staff" class="p-fluid col-2" [style]="{height: '100%', width: '20%'}">
+      <div><strong>Shared: </strong></div>
+      <p-scrollPanel *ngIf="(dataManagementGroups$|async) as managementGroups" [style]="{width: '80%', height: '80%'}">
+        <div *ngIf="managementGroups.length !== 0">
+          <div *ngFor="let group of managementGroups; index as ind">
+            {{ind + 1}}) {{group.name}}
+          </div>
+        </div>
+        <div class="no-validation-box" *ngIf="managementGroups.length === 0">
+          <em> The data set has not been shared </em>
         </div>
       </p-scrollPanel>
-      <div class="no-validation-box" *ngIf="userDataset.validation_list.length === 0">
-        <em> No validation has been run with this data </em>
-      </div>
     </div>
+
+
+
     <!-- actions   -->
-    <div class="col status">
+    <div class="status col-2" [style]="{width: '12%'}">
       <div
         [pTooltip]="userDataset.is_used_in_validation ? 'Dataset has been used in a validation, it can not be removed' : ''"
         tooltipPosition="left">
